module/network/security-group/security-rule.tf
resource "aws_security_group_rule" "sgr-web" {
  type              = "ingress"
  from_port         = 0
  to_port           = 3306
  protocol          = "tcp"
  cidr_blocks       = [var.sp-vpc-cidr-block]
  security_group_id = aws_security_group.web-sg.id
}
