module/network/security-group/security-group.tf
resource "aws_default_security_group" "default" {
  vpc_id = var.sp-vpc-id

  ingress {
    protocol    = -1
    self        = true
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "web-sg" {
  vpc_id      = var.sp-vpc-id
  description = "Allow TLS inbound traffic and all outbound traffic"

  ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-sp-sg-web"
  }
}

resource "aws_security_group" "rds-sg" {
  vpc_id = var.sp-vpc-id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = var.environment == "dev" ? null : [aws_security_group.web-sg.id]
    cidr_blocks     = var.environment == "dev" ? ["0.0.0.0/0"] : null
  }

  tags = {
    Name = "${var.environment}-sp-rds-sg"
  }
}

resource "aws_security_group" "document-sg" {
  vpc_id = var.sp-vpc-id

  ingress {
    from_port       = 27017
    to_port         = 27017
    protocol        = "tcp"
    security_groups = [aws_security_group.web-sg.id]
  }

  tags = {
    Name = "${var.environment}-sp-document-sg"
  }
}

resource "aws_security_group" "cluster-sg" {
  vpc_id = var.sp-vpc-id

  ingress {
    from_port       = 27017
    to_port         = 27017
    protocol        = "tcp"
    security_groups = [aws_security_group.web-sg.id]
  }

  tags = {
    Name = "${var.environment}-sp-cluster-sg"
  }
}
